force-app/main/default/objects/Account/fields/CY_Closed_Won_and_Closed_Won_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>CY_Closed_Won_and_Closed_Won_Reconciled__c</fullName>
    <formula>CY_Closed_Won_Revenue__c +  Current_Year_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Closed Won and Closed Won Reconciled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>