force-app/main/default/objects/Account/fields/CY_Closed_Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_Closed_Won_Revenue__c</fullName>
    <label>CY Closed Won Revenue</label>
    <summarizedField>Opportunity.Current_Year_Forecast__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>