force-app/main/default/objects/Account/fields/Degree_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Degree_Ranking__c</fullName>
    <formula>IF( ISPICKVAL( School_Type__c , &quot;4-year, Public&quot;),20, 
IF( ISPICKVAL( School_Type__c , &quot;4-year, Private not-for-profit&quot;),20,
 IF( ISPICKVAL( School_Type__c ,&quot;4-year, Private for-profit&quot;), 20,5 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>