force-app/main/default/objects/Account/fields/Delta_Sigma_PPi_Chapter_2_1_2020__c.field-meta.xml
<CustomField>
    <fullName>Delta_Sigma_PPi_Chapter_2_1_2020__c</fullName>
    <label>Delta Sigma Pi Chapter</label>
    <length>30</length>
    <type>Text</type>
</CustomField>