force-app/main/default/objects/Account/fields/Dining_Contract__c.field-meta.xml
<CustomField>
    <fullName>Dining_Contract__c</fullName>
    <label>Dining Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chartwells</fullName>
            </value>
            <value>
                <fullName>Aramark</fullName>
            </value>
            <value>
                <fullName>Sodexo</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>