force-app/main/default/objects/Account/fields/Doctor_s_degree__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctor&apos;s degree</label>
    <type>Checkbox</type>
</CustomField>