force-app/main/default/objects/Account/fields/Doctor_s_degree_other__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_degree_other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctor&apos;s degree - other</label>
    <type>Checkbox</type>
</CustomField>