force-app/main/default/objects/Account/fields/Doctor_s_degree_research_scholarship__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_degree_research_scholarship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctor&apos;s degree - research/scholarship</label>
    <type>Checkbox</type>
</CustomField>