force-app/main/default/objects/Account/fields/DSP__c.field-meta.xml
<CustomField>
    <fullName>DSP__c</fullName>
    <label># of Current DSP Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>