force-app/main/default/objects/Account/fields/DSP_Chapter_Website__c.field-meta.xml
<CustomField>
    <fullName>DSP_Chapter_Website__c</fullName>
    <label>DSP Chapter Website</label>
    <type>Url</type>
</CustomField>