force-app/main/default/objects/Account/fields/edu_Domain__c.field-meta.xml
<CustomField>
    <fullName>edu_Domain__c</fullName>
    <description>University .edu domain, often needed by our Prime Student client.</description>
    <label>.edu Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>