force-app/main/default/objects/Account/fields/Enrollment_by_Grade__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_by_Grade__c</fullName>
    <label>Enrollment by Grade</label>
    <type>TextArea</type>
</CustomField>