force-app/main/default/objects/Account/fields/Enrollment_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Ranking__c</fullName>
    <formula>IF( Enrollment__c &gt;= 40000,30,
IF( Enrollment__c &gt;= 20000,15,
IF( Enrollment__c &gt;= 1000,10,5) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Ranking</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>