force-app/main/default/objects/Account/fields/External_Vendor_Tabling_Allowed__c.field-meta.xml
<CustomField>
    <fullName>External_Vendor_Tabling_Allowed__c</fullName>
    <description>Can an external vendor (like R&amp;B) table or host an event on campus?</description>
    <inlineHelpText>Can an external vendor (like R&amp;B) table or host an event on campus?</inlineHelpText>
    <label>External Vendor Event Allowed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>