force-app/main/default/objects/Account/fields/Fall_Classes_End__c.field-meta.xml
<CustomField>
    <fullName>Fall_Classes_End__c</fullName>
    <label>Fall Classes End</label>
    <length>50</length>
    <type>Text</type>
</CustomField>