force-app/main/default/objects/Account/fields/Fall_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Fall_Graduation_Date__c</fullName>
    <label>Fall Graduation Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>