force-app/main/default/objects/Account/fields/Fall_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Fall_Holidays__c</fullName>
    <label>Fall Holidays</label>
    <length>50</length>
    <type>Text</type>
</CustomField>