force-app/main/default/objects/Account/fields/Fall_Sports__c.field-meta.xml
<CustomField>
    <fullName>Fall_Sports__c</fullName>
    <label>Fall Sports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>Bowling</fullName>
            </value>
            <value>
                <fullName>Cheer</fullName>
            </value>
            <value>
                <fullName>Cross Country</fullName>
            </value>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Field Hockey</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Flag Football</fullName>
            </value>
            <value>
                <fullName>Lacrosse</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Volleyball</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>