force-app/main/default/objects/Account/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <label>% Female</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>