force-app/main/default/objects/Account/fields/Fountain_Beverage_Contract__c.field-meta.xml
<CustomField>
    <fullName>Fountain_Beverage_Contract__c</fullName>
    <description>All places within dining services (ex: dining halls)</description>
    <inlineHelpText>All places within dining services (ex: dining halls)</inlineHelpText>
    <label>Fountain Beverage Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coke</fullName>
            </value>
            <value>
                <fullName>Pepsi</fullName>
            </value>
            <value>
                <fullName>Shared (Coke/Pepsi share rights across campus, no pouring rights deal)</fullName>
            </value>
            <value>
                <fullName>Keurig Dr Pepper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>