force-app/main/default/objects/Account/fields/Free_Lunch_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Free_Lunch_Eligible__c</fullName>
    <label>Free Lunch Eligible</label>
    <type>TextArea</type>
</CustomField>