force-app/main/default/objects/Account/fields/Freshmen_Required_to_Live_On_Campus__c.field-meta.xml
<CustomField>
    <fullName>Freshmen_Required_to_Live_On_Campus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freshmen Required to Live On Campus</label>
    <type>Checkbox</type>
</CustomField>