force-app/main/default/objects/Account/fields/Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Full_Time__c</fullName>
    <label>% Full-Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>