force-app/main/default/objects/Account/fields/FY21_COCA_member__c.field-meta.xml
<CustomField>
    <fullName>FY21_COCA_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY21 COCA member?</label>
    <type>Checkbox</type>
</CustomField>