force-app/main/default/objects/Account/fields/Gap_vs_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Gap_vs_Forecast__c</fullName>
    <formula>Current_Year_Forecasted_Amount__c -( Current_Year_Sum__c  + Current_Year_Forecast__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap vs. Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>