force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender associated to client on intranet roster</description>
    <label>Gender</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>