force-app/main/default/objects/Account/fields/Gender_Focused__c.field-meta.xml
<CustomField>
    <fullName>Gender_Focused__c</fullName>
    <label>Gender Focused?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Gender Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>