force-app/main/default/objects/Account/fields/Geocode1__c.field-meta.xml
<CustomField>
    <fullName>Geocode1__c</fullName>
    <label>Geocode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>