force-app/main/default/objects/Account/fields/Graduation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Rate__c</fullName>
    <description>NA (Not applicable) - Graduation rate, transfer-out rate and the net price are not applicable to institutions that do not have full-time, first-time degree-seeking undergraduate students in the applicable cohort year or the financial aid year.</description>
    <label>Graduation Rate</label>
    <length>200</length>
    <type>Text</type>
</CustomField>