force-app/main/default/objects/Account/fields/Greek_Life__c.field-meta.xml
<CustomField>
    <fullName>Greek_Life__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Greek Life</label>
    <type>Checkbox</type>
</CustomField>