force-app/main/default/objects/Account/fields/Greek_Life_Score__c.field-meta.xml
<CustomField>
    <fullName>Greek_Life_Score__c</fullName>
    <formula>IF( Greek_Life__c = True, 12.5,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greek Life Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>