force-app/main/default/objects/Account/fields/HBCU_College__c.field-meta.xml
<CustomField>
    <fullName>HBCU_College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HBCU College?</label>
    <type>Checkbox</type>
</CustomField>