force-app/main/default/objects/Account/fields/High_School_Property_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>High_School_Property_Affiliation__c</fullName>
    <label>High School Property Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>District of Columbia State Athletic Association (DCSAA)</fullName>
            </value>
            <value>
                <fullName>Massachusetts Interscholastic Athletic Association (MIAA)</fullName>
            </value>
            <value>
                <fullName>North Carolina Independent Schools Athletic Association (NCISAA)</fullName>
            </value>
            <value>
                <fullName>Ohio High School Athletic Association (OHSAA)</fullName>
            </value>
            <value>
                <fullName>Ohio Valley Athletic Conference (OVAC)</fullName>
            </value>
            <value>
                <fullName>Rhode Island Interscholastic League (RIIL)</fullName>
            </value>
            <value>
                <fullName>South Carolina High School League (SCHSL)</fullName>
            </value>
            <value>
                <fullName>South Carolina Independent School Association (SCISA)</fullName>
            </value>
            <value>
                <fullName>Vermont Principals’ Association (VPA)</fullName>
            </value>
            <value>
                <fullName>Virginia Independent Schools Athletic Association (VISAA)</fullName>
            </value>
            <value>
                <fullName>Western Pennsylvania Interscholastic Athletic League (WPIAL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>