force-app/main/default/objects/Account/fields/Hispanic__c.field-meta.xml
<CustomField>
    <fullName>Hispanic__c</fullName>
    <label>% Hispanic/Latino</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>