force-app/main/default/objects/Account/fields/Hispanic_Serving_Institution__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Serving_Institution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Per HACU https://www.hacu.net/assnfe/CompanyDirectory.asp?STYLE=2&amp;COMPANY_TYPE=1,5&amp;SEARCH_TYPE=0</description>
    <inlineHelpText>Per HACU https://www.hacu.net/assnfe/CompanyDirectory.asp?STYLE=2&amp;COMPANY_TYPE=1,5&amp;SEARCH_TYPE=0</inlineHelpText>
    <label>Hispanic Serving Institution</label>
    <type>Checkbox</type>
</CustomField>