force-app/main/default/objects/Account/fields/Housing_Score__c.field-meta.xml
<CustomField>
    <fullName>Housing_Score__c</fullName>
    <formula>IF(Campus_Housing__c  = True,25,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>