force-app/main/default/objects/Account/fields/In_Season_Address__c.field-meta.xml
<CustomField>
    <fullName>In_Season_Address__c</fullName>
    <label>In-Season Address</label>
    <type>TextArea</type>
</CustomField>