force-app/main/default/objects/Account/fields/Indian__c.field-meta.xml
<CustomField>
    <fullName>Indian__c</fullName>
    <label>% American Indian or Alaskan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>