force-app/main/default/objects/Account/fields/Indoor_Event_Space_Location_and_Notes__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Event_Space_Location_and_Notes__c</fullName>
    <label>Indoor Event Space Location and Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>