force-app/main/default/objects/Account/fields/Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_ID__c</fullName>
    <description>&quot;Internal ID&quot; provided on LS Data Migration template</description>
    <inlineHelpText>&quot;Internal ID&quot; provided on LS Data Migration template</inlineHelpText>
    <label>Internal ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>