force-app/main/default/objects/Account/fields/Intramurals_Website__c.field-meta.xml
<CustomField>
    <fullName>Intramurals_Website__c</fullName>
    <label>Intramurals Website</label>
    <type>Url</type>
</CustomField>