force-app/main/default/objects/Account/fields/IPEDS_ID__c.field-meta.xml
<CustomField>
    <fullName>IPEDS_ID__c</fullName>
    <description>College Navigator ID</description>
    <label>IPEDS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>