force-app/main/default/objects/Account/fields/Is_there_a_fee_associated_with_tabling__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_fee_associated_with_tabling__c</fullName>
    <label>Is there a fee associated with tabling?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>