force-app/main/default/objects/Account/fields/Job_Posting_Site_Host__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Site_Host__c</fullName>
    <label>Job Posting Site Host</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Interfase</fullName>
            </value>
            <value>
                <fullName>NACElink</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>University Based</fullName>
            </value>
            <value>
                <fullName>Handshake</fullName>
            </value>
            <value>
                <fullName>12Twenty</fullName>
            </value>
            <value>
                <fullName>College Central</fullName>
            </value>
            <value>
                <fullName>CareerLink</fullName>
            </value>
            <value>
                <fullName>GradLeaders</fullName>
            </value>
            <value>
                <fullName>Purple Briefcase</fullName>
            </value>
            <value>
                <fullName>Magnet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>