force-app/main/default/objects/Account/fields/Largest_Program__c.field-meta.xml
<CustomField>
    <fullName>Largest_Program__c</fullName>
    <label>Largest Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>