force-app/main/default/objects/Account/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>&quot;ID&quot; column provided on LS Data Migration Template</description>
    <inlineHelpText>&quot;ID&quot; column provided on LS Data Migration Template</inlineHelpText>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>