force-app/main/default/objects/Account/fields/Less_than_one_year_certificate__c.field-meta.xml
<CustomField>
    <fullName>Less_than_one_year_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less than one year certificate</label>
    <type>Checkbox</type>
</CustomField>