force-app/main/default/objects/Account/fields/Linked_Accounts_Status__c.field-meta.xml
<CustomField>
    <fullName>Linked_Accounts_Status__c</fullName>
    <label>Linked Accounts Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Active Existing Client</fullName>
            </value>
            <value>
                <fullName>Inactive Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>