force-app/main/default/objects/Account/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <label>% Male</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>