force-app/main/default/objects/Account/fields/Marketing_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Fee_Percentage__c</fullName>
    <inlineHelpText>What is the default percentage set on Talent Marketing deals?</inlineHelpText>
    <label>Marketing Fee Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>