force-app/main/default/objects/Account/fields/Master_s_degree__c.field-meta.xml
<CustomField>
    <fullName>Master_s_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master&apos;s degree</label>
    <type>Checkbox</type>
</CustomField>