force-app/main/default/objects/Account/fields/Media_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Media_Ranking__c</fullName>
    <description>0 - Has no record of media offerings on campus (do not recommend)
1 - Has media, R&amp;B might not have purchased directly (very low priority, might not have enough media options)
2 - Has Media offerings, responsive contact that we can depend on
3 - Several Media offerings, responsive, solid contact
4 - Supportive contact who we can lean on for multiple media opportunities</description>
    <inlineHelpText>0 - Has no record of media offerings on campus (do not recommend)
1 - Has media, R&amp;B might not have purchased directly (very low priority, might not have enough media options)
2 - Has Media offerings, responsive contact that we can depend on
3 - Several Media offerings, responsive, solid contact 
4 - Supportive contact who we can lean on for multiple media opportunities</inlineHelpText>
    <label>Media Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>