force-app/main/default/objects/Account/fields/MediaMate_School__c.field-meta.xml
<CustomField>
    <fullName>MediaMate_School__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Higher costs associated</inlineHelpText>
    <label>MediaMate School?</label>
    <type>Checkbox</type>
</CustomField>