force-app/main/default/objects/Account/fields/NACA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NACA_Account_Number__c</fullName>
    <label>NACA Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>