force-app/main/default/objects/Account/fields/NACA_Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NACA_Membership_Expiration_Date__c</fullName>
    <label>NACA Membership Expiration Date</label>
    <type>Date</type>
</CustomField>