force-app/main/default/objects/Account/fields/NACA_Volume__c.field-meta.xml
<CustomField>
    <fullName>NACA_Volume__c</fullName>
    <label>NACA Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>