force-app/main/default/objects/Account/fields/NACAS__c.field-meta.xml
<CustomField>
    <fullName>NACAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY21 NACAS School Member?</label>
    <type>Checkbox</type>
</CustomField>