force-app/main/default/objects/Account/fields/NACAS_ID__c.field-meta.xml
<CustomField>
    <fullName>NACAS_ID__c</fullName>
    <label>NACAS ID #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>