force-app/main/default/objects/Account/fields/Native_Hawaiian_or_other__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian_or_other__c</fullName>
    <label>% Native Hawaiian or other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>